syntax = "proto3";

option csharp_namespace = "AutoMapper.Extensions.Protobuf.Tests";

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

package test;

message TestValue {
    string string = 1;
    bytes bytes = 2;
    repeated int32 list = 3;
    map<int32, NullableValue> map = 4;
    repeated MapFieldEntry list_map = 5;

    message MapFieldEntry {
        Corpus key = 1;
        NullableValue value = 2;
    }
}

message NullableValue {
    google.protobuf.StringValue string = 1;
    google.protobuf.BytesValue bytes = 2;
    google.protobuf.Duration duration = 3;
    google.protobuf.Timestamp timestamp = 4;
}

enum Corpus {
    UNSPECIFIED = 0;
    UNIVERSAL = 1;
    WEB = 2;
    IMAGES = 3;
    LOCAL = 4;
    NEWS = 5;
    PRODUCTS = 6;
    VIDEO = 7;
}
